eagle_test/error/return_error.eagle
return 1;
// expected: [Error at line 1] Can't use 'return' keyword outside function(method)
